# scripts-writer

./: .env.example  .gitignore  .opencode.json  README.md  dev  dev.sh
backend/: README.md  alembic.ini  main.py  pyproject.toml
backend/app/: config.py  logging_config.py  main.py
backend/app/agents/: base.py  copyright_agent.py  cta_agent.py  factcheck_agent.py  hook_agent.py  icp_agent.py  narrative_agent.py  policy_agent.py  readability_agent.py  retention_agent.py  selection_rewrite_agent.py  writer_agent.py
backend/app/api/: analysis.py  export.py  hooks.py  icp.py  notebooklm.py  pipeline.py  piragi.py  projects.py  router.py  scripts.py  settings.py
backend/app/db/: database.py  models.py
backend/app/integrations/: errors.py  notebooklm.py
backend/app/llm/: base.py  cache.py  errors.py  gemini_provider.py  groq_provider.py  modal_provider.py  ollama_provider.py  provider_factory.py
backend/app/pipeline/: errors.py  orchestrator.py  state.py
backend/app/rag/: __init__.py  config.py  faiss_service.py
backend/app/schemas/: agents.py  analysis.py  icp.py  notebooklm.py  pipeline.py  piragi.py  project.py  script.py  settings.py
backend/app/services/: analysis_service.py  export_service.py  notebooklm_service.py  pipeline_service.py  piragi_service.py  project_service.py
backend/app/ws/: connection.py  handlers.py
backend/documents/narrative/: aida.txt  (+2 more)
backend/dummyfiles/: answer_generation.py  ingestion_pipeline.py
backend/scripts/: ingest_hook_data.py  ingest_narrative_data.py  notebooklm_login.py  test_llm.py
backend/tests/: conftest.py
(+216 files in other folders)
