[project]
name = "scripts-writer-backend"
version = "0.1.0"
description = "Agentic AI pipeline for generating high-converting video scripts and marketing posts"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi>=0.135.3",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "ollama>=0.6.1",
    "openai>=2.31.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.80.0",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]

[tool.ruff]
line-length = 120
exclude = ["app/db/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
